--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,6 +102,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        vectorDrawables.useSupportLibrary = true
     }
     splits {
         abi {
@@ -148,6 +149,7 @@ dependencies {
 
     // 如果只需要支持WebP格式而不需要动图
     compile 'com.facebook.fresco:webpsupport:1.0.1'
+    compile project(':react-native-image-picker')
 }
 
 // Run this once to be able to run the application with BUCK
