--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,8 @@
 rootProject.name = 'demo'
+include ':react-native-image-crop-picker'
+project(':react-native-image-crop-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-crop-picker/android')
 
 include ':app'
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(settingsDir, '../node_modules/react-native-image-picker/android')
+
