--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-native-animatable": "^1.2.3",
     "react-native-button": "^2.1.0",
     "react-native-collapsible": "^0.8.1",
+    "react-native-image-crop-picker": "^0.15.1",
+    "react-native-image-picker": "^0.26.3",
     "react-native-linear-gradient": "^2.1.0",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-router-flux": "^4.0.0-beta.12",
